Internal Booking - UI Implementation

--- a/app/pages/properties/availability/availability.component.css
+++ b/app/pages/properties/availability/availability.component.css
@@ -65,7 +65,7 @@
     background-color: #f3f5f6;
     height: 24px;
     line-height: 24px;
-    margin: 20px 0;
+    margin: 20px 0  0;
 }
 
 .toolbar .buttons-bar {
