Fix the label on the Property -> Admin info form. Should be "Phone" instead of "Telephone"

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -251,7 +251,7 @@
                                 <input type="email" class="form-control" [formControl]="control.controls.EmailAddress">
                             </div>
                             <div class="form-group label-floating">
-                                <label class="control-label">Telephone</label>
+                                <label class="control-label">Phone</label>
                                 <input type="text" class="form-control" [formControl]="control.controls.Telephone">
                             </div>
                             <div *ngIf="loginService.getPermission('Properties/Put')" class="row">
