Internal Booking - UI Implementation

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -141,7 +141,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-xs-6">
-                                                <input-field-cmp [data]="{title: 'EMail', name: 'ClientEmail', type: 'text'}"
+                                                <input-field-cmp [data]="{title: 'Email', name: 'ClientEmail', type: 'text'}"
                                                                  [errorForm]="errorForm"
                                                                  [field]="availabilityForm.controls.ClientEmail"></input-field-cmp>
                                             </div>
