--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -31,7 +31,7 @@
                             <i class="material-icons">date_range</i>
                         </div>
                         <h4 class="card-title m-t-15">
-                            Availability for {{propertiesService.property && propertiesService.property.InternalName}}
+                            Availability for "{{propertiesService.property && propertiesService.property.InternalName}}"
                         </h4>
                     </div>
                     <calendar-cmp *ngIf="isCalendarView && bookingDays"
