--- a/app/pages/properties/setrates/setrates.component.html
+++ b/app/pages/properties/setrates/setrates.component.html
@@ -7,7 +7,7 @@
                         <i class="material-icons">assignment</i>
                     </div>
                     <div class="card-content">
-                        <h4 class="card-title">Rates for {{propertyService.property && propertyService.property.InternalName}}</h4>
+                        <h4 class="card-title">Rates for "{{propertyService.property && propertyService.property.InternalName}}"</h4>
                         <div class="material-datatables">
                             <table id="datatables"
                                    class="table table-rates"
