--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -52,9 +52,11 @@
                     <div id="extend-filter" class="extend-filter-container collapse" *ngIf="dashboardService.metadata.length">
                         <div class="card">
                             <ul class="row m-l-r-none nav nav-pills">
-                                <li class="nav-pill col-xs-3 col-width-21" *ngFor="let metafilter of metafilters" [ngClass]="{ hidden: metafilter.Name == 'Local Activities' }">
+                                <li class="nav-pill col-xs-4 col-width-21"
+                                    *ngFor="let metafilter of metafilters"
+                                    [ngClass]="{ hidden: metafilter.Name == 'Local Activities' || metafilter.Name == 'Points of Interest' }">
                                     <div class="form-group label-floating">
-                                        <label class="control-label">{{metafilter.Name}}</label>
+                                        <label class="control-label">{{ metafilter.Name == 'Suitable For' ? '' : metafilter.Name }}</label>
                                         <a class="form-control-static" data-toggle="tab" [href]="'#metafilter-' + metafilter.Id">
                                             Select
                                             <span class="bs-caret"><span class="caret"></span></span>
@@ -66,7 +68,7 @@
                                 <div class="col-xs-12">
                                     <div formArrayName="MetaDataFilters" class="tab-content">
                                         <div *ngFor="let metafilter of metafilters" [id]="'metafilter-' + metafilter.Id" class="tab-pane">
-                                            <div class="row" *ngIf="metafilter.Name != 'Local Activities'">
+                                            <div class="row" *ngIf="metafilter.Name != 'Local Activities' || metafilter.Name != 'Points of Interest'">
                                                 <div *ngFor="let metadata of metafilter.MetaDataSubTypes" class="col-xs-3">
                                                     <h5 class="m-b-none">{{metadata.Name}}</h5>
                                                     <div class="checkbox" *ngFor="let meta of metadata.MetaData; let i = index">
