Property | Marketing - Url validation

--- a/app/pages/properties/marketing/propertymarketing.component.html
+++ b/app/pages/properties/marketing/propertymarketing.component.html
@@ -4,7 +4,7 @@
             <div class="form-group label-floating"
                  [ngClass]="{'form-error': !propertyForm.controls['PropertyUrl'].valid}">
                 <label class="control-label">Property URL</label>
-                <input type="text" class="form-control" formControlName="PropertyUrl" #pdfUrl>
+                <input type="text" class="form-control" formControlName="PropertyUrl">
             </div>
         </div>
     </div>
@@ -13,7 +13,7 @@
             <div class="form-group label-floating"
                  [ngClass]="{'form-error': !propertyForm.controls['PropertyAssetsUrl'].valid}">
                 <label class="control-label">Property Assets URL</label>
-                <input type="text" class="form-control" formControlName="PropertyAssetsUrl" #agencyUrl>
+                <input type="text" class="form-control" formControlName="PropertyAssetsUrl">
             </div>
         </div>
     </div>
