--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -171,7 +171,7 @@
                                         <div class="row">
                                             <div class="col-xs-6">
                                                 <input-field-cmp
-                                                        [data]="{title: 'EMail', name: 'AgentEmail', type: 'text'}"
+                                                        [data]="{title: 'Email', name: 'AgentEmail', type: 'text'}"
                                                         [errorForm]="errorForm"
                                                         [field]="availabilityForm.controls.AgentEmail"></input-field-cmp>
                                             </div>
