--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -237,6 +237,10 @@
                                                         [field]="control.controls.ContactType"></singleselect-field-cmp>
                                 <!--<input type="text" class="form-control" [formControl]="control.controls.JobTitle">-->
                             </div>
+                            <div class="form-group label-floating" *ngIf="control.controls.ContactType.value.Id == 7">
+                                <label class="control-label">Contact Type Other</label>
+                                <input type="text" class="form-control" [formControl]="control.controls.ContactTypeOther">
+                            </div>
                             <div class="form-group label-floating">
                                 <label class="control-label">First Name</label>
                                 <input type="text" class="form-control" [formControl]="control.controls.FirstName">
