fixed calendar list table

--- a/app/components/calendar-list/calendar-list.component.html
+++ b/app/components/calendar-list/calendar-list.component.html
@@ -59,6 +59,7 @@
                                     </button>
                                 </popover-content>
                             </td>
+                            {{ last && !datatableInited ? finishReading() : "" }}
                         </tr>
                         <!--<tr>-->
                             <!--<td>Internal</td>-->
