--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -298,7 +298,7 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .control-label {
 	color: #b0bec5 !important;
 }
-.form-group.is-focused .form-control {
+.form-group.is-focused .form-control, .form-group.is-focused .form-control.valid {
 	background-image: linear-gradient(#5399bc, #5399bc), linear-gradient(#5399bc, #5399bc);
 }
 .btn-group.bootstrap-select.show-tick.open .select-with-transition {
