Rearrange 'Size and Rooms' section in 'Property Info' tab on 'Properties Add/Update' Screen

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -291,7 +291,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-6">
+                        </div>
+                        <div class="row p-t-10">
+                            <div class="col-xs-9">
                                 <legend>Bedrooms</legend>
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6">
@@ -358,7 +360,7 @@
                             </div>
                         </div>
                         <div class="row p-t-10">
-                            <div class="col-xs-6">
+                            <div class="col-lg-9 col-xs-12">
                                 <legend>Bathrooms</legend>
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6">
@@ -412,7 +414,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-6">
+                        </div>
+                        <div class="row p-t-10">
+                            <div class="col-lg-9 col-xs-12">
                                 <legend>Kitchen</legend>
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6">
