--- a/app/components/calendar-list/calendar-list.component.html
+++ b/app/components/calendar-list/calendar-list.component.html
@@ -48,8 +48,8 @@
                                 <popover-content #i
                                                  placement="left"
                                                  [animation]="true"
-                                                 [closeOnMouseOutside]="false"
-                                                 [closeOnClickOutside]="false">
+                                                 [closeOnMouseOutside]="true"
+                                                 [closeOnClickOutside]="true">
                                     <h3>Are you sure?</h3>
                                     <button type="button" class="btn btn-danger font-14" (click)="deleteEvent(item.Id)">
                                         Yes, remove
