The Type field should be disabled on Edit Availability.

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -83,6 +83,7 @@
                                         <singleselect-field-cmp
                                                 [dataList]="calendarEntryTypes"
                                                 [options]="{title: 'Type', default: 'Other'}"
+                                                [disabled]="role"
                                                 [errorForm]="errorForm"
                                                 [field]="availabilityForm.controls.EntryType"></singleselect-field-cmp>
                                     </div>
